fix trick view blocking player buttons in 5P mode on small screens; make touchable feedback area larger

--- a/src/views/otherPlayersView.module.css
+++ b/src/views/otherPlayersView.module.css
@@ -68,3 +68,7 @@
   flex-direction: column;
   align-items: center;
 }
+
+.playerContainer:active {
+  opacity: 30%;
+}
